--- a/doc/latex/Instances/Monoidal.tex
+++ b/doc/latex/Instances/Monoidal.tex
@@ -805,7 +805,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaKeyword{module}\AgdaSpace{}%
+\>[2]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{\AgdaUnderscore{}}%
 \>[503I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
@@ -828,8 +828,8 @@
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<%
 \\
-\>[.][@{}l@{}]\<[503I]%
-\>[13]\AgdaSymbol{(}\AgdaBound{reflABC}\AgdaSpace{}%
+\>[503I][@{}l@{\AgdaIndent{0}}]%
+\>[12]\AgdaSymbol{(}\AgdaBound{reflABC}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Reflexive}\AgdaSpace{}%
 \AgdaOperator{\AgdaBound{\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
@@ -837,8 +837,8 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaKeyword{open}\AgdaSpace{}%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Equality}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{×}}\AgdaSpace{}%
@@ -850,13 +850,13 @@
 \AgdaSymbol{(}\AgdaUnderscore{}≅\AgdaUnderscore{}\AgdaSymbol{)}\<%
 \\
 %
-\>[6]\AgdaKeyword{open}\AgdaSpace{}%
+\>[4]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Equality.Rel}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[6]\AgdaFunction{associative}\AgdaSpace{}%
+\>[4]\AgdaFunction{associative}\AgdaSpace{}%
 \AgdaSymbol{:}%
 \>[538I]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -872,7 +872,7 @@
 \AgdaOperator{\AgdaDatatype{⊥}}\AgdaSymbol{)}\<%
 \\
 \>[.][@{}l@{}]\<[538I]%
-\>[20]\AgdaSymbol{→}\AgdaSpace{}%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{fmap}\AgdaSpace{}%
 \AgdaSymbol{(λ}\AgdaSpace{}%
 \AgdaSymbol{\{((}\AgdaBound{a}\AgdaSpace{}%
@@ -884,16 +884,16 @@
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
-\AgdaOperator{\AgdaInductiveConstructor{,}}%
-\>[562I]\AgdaBound{c}\AgdaSymbol{))\})}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{merge}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSymbol{))\})}%
+\>[563I]\AgdaSymbol{(}\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{))}\<%
 \\
-\>[562I][@{}l@{\AgdaIndent{0}}]%
-\>[63]\AgdaOperator{\AgdaFunction{≅}}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[563I]%
+\>[62]\AgdaOperator{\AgdaFunction{≅}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{merge}\AgdaSpace{}%
@@ -901,24 +901,24 @@
 \AgdaBound{c}\AgdaSymbol{))}\<%
 \\
 %
-\>[6]\AgdaFunction{associative}\AgdaSpace{}%
+\>[4]\AgdaFunction{associative}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}%
-\>[28]\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
+\>[26]\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}%
-\>[38]\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
+\>[36]\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}%
-\>[48]\AgdaSymbol{=}\AgdaSpace{}%
+\>[46]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{reflABC}\<%
 \\
 %
-\>[6]\AgdaFunction{associative}\AgdaSpace{}%
+\>[4]\AgdaFunction{associative}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}%
-\>[28]\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
+\>[26]\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}%
-\>[38]\AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
+\>[36]\AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{later}\AgdaSpace{}%
@@ -932,14 +932,14 @@
 \AgdaBound{c}\AgdaSymbol{)))}\<%
 \\
 %
-\>[6]\AgdaFunction{associative}\AgdaSpace{}%
+\>[4]\AgdaFunction{associative}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}%
-\>[28]\AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
+\>[26]\AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}%
-\>[48]\AgdaSymbol{=}\AgdaSpace{}%
+\>[46]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaCoinductiveConstructor{♯}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{associative}\AgdaSpace{}%
@@ -951,10 +951,10 @@
 \AgdaBound{c}\AgdaSymbol{)))}\<%
 \\
 %
-\>[6]\AgdaFunction{associative}\AgdaSpace{}%
+\>[4]\AgdaFunction{associative}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}%
-\>[28]\AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
+\>[26]\AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
@@ -970,31 +970,31 @@
 \AgdaBound{c}\AgdaSymbol{)))}\<%
 \\
 %
-\>[6]\AgdaFunction{associative}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
-\AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
-\AgdaBound{b}\AgdaSymbol{)}%
-\>[38]\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
-\AgdaBound{c}\AgdaSymbol{)}%
-\>[48]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{later}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaCoinductiveConstructor{♯}}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{associative}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{♭}\AgdaSpace{}%
-\AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
-\AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
-\AgdaBound{c}\AgdaSymbol{)))}\<%
-\\
-%
-\>[6]\AgdaFunction{associative}\AgdaSpace{}%
+\>[4]\AgdaFunction{associative}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}%
-\>[38]\AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
+\>[36]\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSymbol{)}%
+\>[46]\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{later}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaCoinductiveConstructor{♯}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{associative}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{♭}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSymbol{)))}\<%
+\\
+%
+\>[4]\AgdaFunction{associative}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
+\AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSymbol{)}%
+\>[36]\AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{later}\AgdaSpace{}%
@@ -1008,14 +1008,14 @@
 \AgdaBound{c}\AgdaSymbol{)))}\<%
 \\
 %
-\>[6]\AgdaFunction{associative}\AgdaSpace{}%
+\>[4]\AgdaFunction{associative}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}%
-\>[48]\AgdaSymbol{=}\AgdaSpace{}%
+\>[46]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaCoinductiveConstructor{♯}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{associative}\AgdaSpace{}%
@@ -1027,7 +1027,7 @@
 \AgdaBound{c}\AgdaSymbol{)))}\<%
 \\
 %
-\>[6]\AgdaFunction{associative}\AgdaSpace{}%
+\>[4]\AgdaFunction{associative}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
@@ -1044,13 +1044,13 @@
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{♭}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)))}\<%
-\\
-\>[0]\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[4]\AgdaKeyword{module}\AgdaSpace{}%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{\AgdaUnderscore{}}%
 \>[683I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1067,8 +1067,8 @@
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<%
 \\
-\>[.][@{}l@{}]\<[683I]%
-\>[13]\AgdaSymbol{(}\AgdaBound{reflA×⊤}\AgdaSpace{}%
+\>[683I][@{}l@{\AgdaIndent{0}}]%
+\>[12]\AgdaSymbol{(}\AgdaBound{reflA×⊤}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Reflexive}\AgdaSpace{}%
 \AgdaOperator{\AgdaBound{\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1076,8 +1076,8 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaKeyword{open}\AgdaSpace{}%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Equality}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{×}}\AgdaSpace{}%
@@ -1087,13 +1087,13 @@
 \AgdaSymbol{(}\AgdaUnderscore{}≅\AgdaUnderscore{}\AgdaSymbol{)}\<%
 \\
 %
-\>[6]\AgdaKeyword{open}\AgdaSpace{}%
+\>[4]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Equality.Rel}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[6]\AgdaFunction{rid}\AgdaSpace{}%
+\>[4]\AgdaFunction{rid}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1114,15 +1114,15 @@
 \AgdaBound{a}\AgdaSymbol{)}\<%
 \\
 %
-\>[6]\AgdaFunction{rid}\AgdaSpace{}%
+\>[4]\AgdaFunction{rid}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
-\>[20]\AgdaSymbol{=}\AgdaSpace{}%
+\>[18]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{reflA×⊤}\<%
 \\
 %
-\>[6]\AgdaFunction{rid}\AgdaSpace{}%
+\>[4]\AgdaFunction{rid}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1135,7 +1135,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[4]\AgdaKeyword{module}\AgdaSpace{}%
+\>[2]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{\AgdaUnderscore{}}%
 \>[740I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1152,8 +1152,8 @@
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\<%
 \\
-\>[.][@{}l@{}]\<[740I]%
-\>[13]\AgdaSymbol{(}\AgdaBound{refl⊤×A}\AgdaSpace{}%
+\>[740I][@{}l@{\AgdaIndent{0}}]%
+\>[12]\AgdaSymbol{(}\AgdaBound{refl⊤×A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Reflexive}\AgdaSpace{}%
 \AgdaOperator{\AgdaBound{\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1161,8 +1161,8 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaKeyword{open}\AgdaSpace{}%
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Equality}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaRecord{⊤}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{×}}\AgdaSpace{}%
@@ -1172,13 +1172,13 @@
 \AgdaSymbol{(}\AgdaUnderscore{}≅\AgdaUnderscore{}\AgdaSymbol{)}\<%
 \\
 %
-\>[6]\AgdaKeyword{open}\AgdaSpace{}%
+\>[4]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Equality.Rel}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[6]\AgdaFunction{lid}\AgdaSpace{}%
+\>[4]\AgdaFunction{lid}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1199,15 +1199,15 @@
 \AgdaBound{a}\AgdaSymbol{)}\<%
 \\
 %
-\>[6]\AgdaFunction{lid}\AgdaSpace{}%
+\>[4]\AgdaFunction{lid}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}%
-\>[20]\AgdaSymbol{=}\AgdaSpace{}%
+\>[18]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaInductiveConstructor{now}\AgdaSpace{}%
 \AgdaBound{refl⊤×A}\<%
 \\
 %
-\>[6]\AgdaFunction{lid}\AgdaSpace{}%
+\>[4]\AgdaFunction{lid}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1220,7 +1220,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[4]\AgdaKeyword{open}\AgdaSpace{}%
+\>[2]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaKeyword{import}\AgdaSpace{}%
 \AgdaModule{Structures.MonoidalFunctor}\AgdaSpace{}%
 \AgdaKeyword{hiding}\AgdaSpace{}%
@@ -1231,7 +1231,7 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[4]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≅⊥\AgdaUnderscore{}}}\AgdaSpace{}%
+\>[2]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≅⊥\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -1245,7 +1245,7 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≅⊥\AgdaUnderscore{}}}\AgdaSpace{}%
+\>[2]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≅⊥\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{Equality.\AgdaUnderscore{}≅\AgdaUnderscore{}}}\AgdaSpace{}%
@@ -1256,17 +1256,17 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[4]\AgdaKeyword{open}\AgdaSpace{}%
+\>[2]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Equivalence}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{refl}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaFunction{sym}\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaFunction{trans}\AgdaSymbol{)}\<%
 \\
-\>[0]\<%
-\\
 %
-\>[4]\AgdaFunction{eq≅⊥}\AgdaSpace{}%
+\\[\AgdaEmptyExtraSkip]%
+%
+\>[2]\AgdaFunction{eq≅⊥}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -1276,12 +1276,12 @@
 \AgdaSymbol{\{}\AgdaBound{A}\AgdaSymbol{\})}\<%
 \\
 %
-\>[4]\AgdaFunction{eq≅⊥}\AgdaSpace{}%
+\>[2]\AgdaFunction{eq≅⊥}\AgdaSpace{}%
 \AgdaSymbol{=}%
 \>[832I]\AgdaKeyword{record}\<%
 \\
 \>[832I][@{}l@{\AgdaIndent{0}}]%
-\>[12]\AgdaSymbol{\{}%
+\>[10]\AgdaSymbol{\{}%
 \>[833I]\AgdaField{refl}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{refl}\AgdaSpace{}%
@@ -1290,7 +1290,7 @@
 \AgdaSymbol{;}\<%
 \\
 \>[.][@{}l@{}]\<[833I]%
-\>[14]\AgdaField{sym}\AgdaSpace{}%
+\>[12]\AgdaField{sym}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{sym}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{IsEquivalence.sym}\AgdaSpace{}%
@@ -1299,7 +1299,7 @@
 \AgdaSymbol{;}\<%
 \\
 %
-\>[14]\AgdaField{trans}\AgdaSpace{}%
+\>[12]\AgdaField{trans}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{trans}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{IsEquivalence.trans}\AgdaSpace{}%
@@ -1309,43 +1309,43 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[4]\AgdaFunction{delayMonoidal}\AgdaSpace{}%
+\>[2]\AgdaFunction{delayMonoidal}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{MonoidalFunctor}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}⊥}}\<%
 \\
 %
-\>[4]\AgdaFunction{delayMonoidal}\AgdaSpace{}%
+\>[2]\AgdaFunction{delayMonoidal}\AgdaSpace{}%
 \AgdaSymbol{=}%
 \>[854I]\AgdaInductiveConstructor{makeMonoidalFunctor}\<%
 \\
 \>[854I][@{}l@{\AgdaIndent{0}}]%
-\>[26]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≅⊥\AgdaUnderscore{}}}\<%
+\>[24]\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≅⊥\AgdaUnderscore{}}}\<%
 \\
 %
-\>[26]\AgdaFunction{eq≅⊥}\<%
+\>[24]\AgdaFunction{eq≅⊥}\<%
 \\
 %
-\>[26]\AgdaFunction{unit}\<%
+\>[24]\AgdaFunction{unit}\<%
 \\
 %
-\>[26]\AgdaFunction{merge}\<%
+\>[24]\AgdaFunction{merge}\<%
 \\
 %
-\>[26]\AgdaFunction{fmap}\<%
+\>[24]\AgdaFunction{fmap}\<%
 \\
 %
-\>[26]\AgdaSymbol{(}\AgdaFunction{rid}\AgdaSpace{}%
+\>[24]\AgdaSymbol{(}\AgdaFunction{rid}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{IsEquivalence.refl}\AgdaSpace{}%
 \AgdaBound{eq∼}\AgdaSymbol{))}\<%
 \\
 %
-\>[26]\AgdaSymbol{(}\AgdaFunction{lid}\AgdaSpace{}%
+\>[24]\AgdaSymbol{(}\AgdaFunction{lid}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{IsEquivalence.refl}\AgdaSpace{}%
 \AgdaBound{eq∼}\AgdaSymbol{))}\<%
 \\
 %
-\>[26]\AgdaSymbol{(}\AgdaFunction{associative}\AgdaSpace{}%
+\>[24]\AgdaSymbol{(}\AgdaFunction{associative}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{IsEquivalence.refl}\AgdaSpace{}%
 \AgdaBound{eq∼}\AgdaSymbol{))}\<%
 \end{code}
