--- a/doc/latex/Structures/ConcurrentMonad.tex
+++ b/doc/latex/Structures/ConcurrentMonad.tex
@@ -127,9 +127,9 @@
 \\
 %
 \>[4]\AgdaField{bcomp≲ₘ}%
-\>[14]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}%
-\>[79I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[14]\AgdaSymbol{:}%
+\>[78I]\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -146,14 +146,14 @@
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\<%
-\\
-\>[.][@{}l@{}]\<[79I]%
-\>[18]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{a₁}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
-\AgdaBound{a₂}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{a₂}\<%
+\\
+\>[.][@{}l@{}]\<[78I]%
+\>[16]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(∀}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -332,16 +332,18 @@
 %
 \>[4]\AgdaField{idr}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{∀}%
+\>[243I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[243I]%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaField{unit}\AgdaSymbol{)}\AgdaSpace{}%
@@ -359,16 +361,18 @@
 %
 \>[4]\AgdaField{idl}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{∀}%
+\>[265I]\AgdaSymbol{\{}\AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
-\AgdaBound{B}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{)}\<%
+\\
+\>[.][@{}l@{}]\<[265I]%
+\>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaField{unit}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
@@ -387,7 +391,7 @@
 \>[4]\AgdaField{assoc}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[289I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[287I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -406,7 +410,7 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[289I]%
+\>[.][@{}l@{}]\<[287I]%
 \>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
@@ -419,17 +423,17 @@
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-\AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}%
-\>[320I]\AgdaField{return}\AgdaSpace{}%
+\AgdaBound{c}\AgdaSymbol{)}%
+\>[317I]\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaField{return}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{))\}))}\<%
 \\
-\>[.][@{}l@{}]\<[320I]%
-\>[66]\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[317I]%
+\>[64]\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
@@ -440,7 +444,7 @@
 \>[4]\AgdaField{comm}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[332I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[330I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -454,7 +458,7 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[332I]%
+\>[.][@{}l@{}]\<[330I]%
 \>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
@@ -478,7 +482,7 @@
 \>[4]\AgdaField{ichange}%
 \>[14]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[363I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[361I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSpace{}%
@@ -506,18 +510,18 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[363I]%
+\>[.][@{}l@{}]\<[361I]%
 \>[18]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}%
-\>[392I]\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
+\>[390I]\AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{g}\AgdaSymbol{))}\<%
 \\
-\>[392I][@{}l@{\AgdaIndent{0}}]%
-\>[32]\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[390I]%
+\>[30]\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
