--- a/doc/main.tex
+++ b/doc/main.tex
@@ -19,6 +19,7 @@
 \usepackage{rotating}
 \usepackage{latex/agda}
 \usepackage[hidelinks]{hyperref}
+\usepackage{nameref}
 %\usepackage{changepage}
 \usepackage{bookmark}
 \usepackage[header]{appendix}
